--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,13 +1,41 @@
+tools:
+    php_sim: true
+    php_pdepend: true
+    php_analyzer: true
+
 checks:
     php:
+        uppercase_constants: true
+        uppercase_basic_constants: true
+        unused_variables: true
+        unused_properties: true
+        unused_parameters: true
+        unreachable_code: true
+        spacing_of_function_arguments: true
+        spacing_around_non_conditional_operators: true
+        spacing_around_conditional_operators: true
+        security_vulnerabilities: true
+        scope_indentation:
+            spaces_per_level: '4'
+        require_php_tag_first: true
+        psr2_switch_declaration: true
+        psr2_control_structure_declaration: true
+        psr2_class_declaration: true
         code_rating: true
         duplication: true
-
-
-tools:
-	php_analyzer: true
-	php_code_sniffer:
-		config:
-			standard: PSR2
-		filter:
-			paths: ['src']
+        variable_existence: true
+        useless_calls: true
+        use_statement_alias_conflict: true
+        unused_methods: true
+        sql_injection_vulnerabilities: true
+        precedence_mistakes: true
+        precedence_in_conditions: true
+        parameter_non_unique: true
+        no_property_on_interface: true
+        no_non_implemented_abstract_methods: true
+        deprecated_code_usage: true
+        closure_use_not_conflicting: true
+        closure_use_modifiable: true
+        avoid_useless_overridden_methods: true
+        avoid_conflicting_incrementers: true
+        assignment_of_null_return: true
