--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,6 +2,16 @@ tools:
     php_sim: true
     php_pdepend: true
     php_analyzer: true
+    php_code_sniffer:
+        config:
+            standard: PSR2 
+	php_mess_detector: true   
+	sensiolabs_security_checker: true    
+	php_loc:
+        enabled: true
+        excluded_dirs: [vendor, tests]
+    php_cpd:
+        enabled: true   
 
 checks:
     php:
